k8s/ingress/arogya-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arogya-ingress
  namespace: arogya
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /appointments
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 8084
          - path: /telemedicine
            pathType: Prefix
            backend:
              service:
                name: telemedicine-service
                port:
                  number: 8086
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
